auto-test/tests/chapter_18/invalid_lex/dot_bad_token_2.c
struct s {
    int a;
};

int main(void) {
    struct s x;
    
    return x.0foo;
}